# balls

./: Cargo.toml  README.md  run.py  run_examples.sh
.github/workflows/: run_examples.yml  rust.yml
balls_bytecode/: Cargo.toml
balls_bytecode/src/: lib.rs
balls_compiler/: Cargo.toml
balls_compiler/src/: lib.rs  scopes.rs
balls_compiler/src/codegen/: mod.rs
balls_compiler/src/diagnostics/: error.rs  mod.rs  warning.rs
balls_compiler/src/lexer/: mod.rs  pretty.rs  token.rs
balls_compiler/src/lowering/: mir.rs  mod.rs
balls_compiler/src/parser/: ast.rs  mod.rs  pretty.rs
balls_compiler/src/typecheck/: mod.rs  typed_ast.rs  types.rs
balls_driver/: Cargo.toml
balls_driver/src/: main.rs
balls_span/: Cargo.toml
balls_span/src/: lib.rs
balls_vm/: Cargo.toml
balls_vm/src/: lib.rs
bytecode/: Cargo.toml
bytecode/src/: lib.rs
compiler/: Cargo.toml
compiler/src/: lib.rs
examples/: empty_function.bl  fibonacci.bl  match_example.bl  multiply_sum.bl  simple.bl
examples/fibonacci/: check  program.bl
examples/multiply_sum/: check  program.bl
vm/: Cargo.toml
vm/src/: lib.rs
