[workspace]
members = [
    "balls_driver",
    "balls_span",
    "balls_bytecode",
    "balls_compiler",
    "balls_vm",
]
resolver = "2"

[workspace.dependencies]
camino = "1.1.7"
chumsky = "1.0.0-alpha.7"
clap = "4.5.4"
codespan-reporting = "0.11.1"
ptree = { version = "0.4.0", default-features = false }

[workspace.lints.rust]
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
unsafe_code = "deny"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
alloc_instead_of_core = "warn"
std_instead_of_core = "warn"
