[workspace]
members = ["balls_driver", "balls_compiler"]
resolver = "2"

[workspace.dependencies]
camino = "1.1.7"
chumsky = "1.0.0-alpha.7"
clap = "4.5.4"
codespan-reporting = "0.11.1"
lasso = "0.7.2"
# levenshtein = "1.0.5"
once_cell = "1.19.0"
ordered-float = "4.2.0"
rustc-hash = "1.1.0"

[workspace.lints.rust]
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
unsafe_code = "deny"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
alloc_instead_of_core = "warn"
std_instead_of_core = "warn"
unwrap_used = "warn"
