[workspace]
members = ["balls_driver", "balls_compiler"]
resolver = "2"

[workspace.dependencies]
camino = "1.1.7"
chumsky = "1.0.0-alpha.7"
clap = "4.5.11"
codespan-reporting = "0.11.1"
lasso = "0.7.2"
once_cell = "1.19.0"
rustc-hash = "1.1.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-tree = { version = "0.3.1", features = ["time"] }

[workspace.lints.rust]
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
unsafe_code = "deny"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
alloc_instead_of_core = "warn"
std_instead_of_core = "warn"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
