[package]
name = "balls_compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
balls_span = { path = "../balls_span" }
balls_bytecode = { path = "../balls_bytecode" }
camino = { workspace = true }
chumsky = { workspace = true }
clap = { workspace = true }
codespan-reporting = { workspace = true }
# levenshtein = { workspace = true }
rustc-hash = { workspace = true }

[lints]
workspace = true
