[package]
name = "balls_compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
camino = { workspace = true }
chumsky = { workspace = true }
clap = { workspace = true }
codespan-reporting = { workspace = true }
lasso = { workspace = true, features = ["multi-threaded"] }
once_cell = { workspace = true }
rustc-hash = { workspace = true }

[lints]
workspace = true
