[package]
name = "balls"
version = "0.1.0"
edition = "2021"

[dependencies]
balls_compiler = { path = "../balls_compiler" }
balls_vm = { path = "../balls_vm" }
camino = { workspace = true }
clap = { workspace = true, features = ["derive"] }
codespan-reporting = { workspace = true }

[lints]
workspace = true
